# extra-proposal

./: .gitignore  .readthedocs.yaml  mkdocs.yml  pyproject.toml
.github/workflows/: tests.yml
docs/: index.md
extra_mymdc/: __init__.py  proposal.py
extra_proposal/: __init__.py  mymdc.py  proposal.py
tests/: conftest.py  test_mymdc_proposal.py
